--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ path.txt
 *.lst
 /firmware/openos/projects/wsn430v14/03oos_mercator/*.ewd
 *~
+projects/common/03oos_tdma/03oos_tdma.os
+projects/common/03oos_tdma/03oos_tdma_obj.os
+projects/common/03oos_tdma_prog
+bsp/boards/python/openwsnmodule_obj.c
+bsp/boards/python/openwsnmodule_obj.os
